; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_zap_micro.c_zap_remove_norm.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_zap_micro.c_zap_remove_norm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RW_WRITER = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@FTAG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @zap_remove_norm(i32* %0, i32 %1, i8* %2, i32 %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i32 %1, i32* %8, align 4
  store i8* %2, i8** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32* %4, i32** %11, align 8
  %14 = load i32*, i32** %7, align 8
  %15 = load i32, i32* %8, align 4
  %16 = load i32*, i32** %11, align 8
  %17 = load i32, i32* @RW_WRITER, align 4
  %18 = load i32, i32* @TRUE, align 4
  %19 = load i32, i32* @FALSE, align 4
  %20 = load i32, i32* @FTAG, align 4
  %21 = call i32 @zap_lockdir(i32* %14, i32 %15, i32* %16, i32 %17, i32 %18, i32 %19, i32 %20, i32** %12)
  store i32 %21, i32* %13, align 4
  %22 = load i32, i32* %13, align 4
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %26

24:                                               ; preds = %5
  %25 = load i32, i32* %13, align 4
  store i32 %25, i32* %6, align 4
  br label %36

26:                                               ; preds = %5
  %27 = load i32*, i32** %12, align 8
  %28 = load i8*, i8** %9, align 8
  %29 = load i32, i32* %10, align 4
  %30 = load i32*, i32** %11, align 8
  %31 = call i32 @zap_remove_impl(i32* %27, i8* %28, i32 %29, i32* %30)
  store i32 %31, i32* %13, align 4
  %32 = load i32*, i32** %12, align 8
  %33 = load i32, i32* @FTAG, align 4
  %34 = call i32 @zap_unlockdir(i32* %32, i32 %33)
  %35 = load i32, i32* %13, align 4
  store i32 %35, i32* %6, align 4
  br label %36

36:                                               ; preds = %26, %24
  %37 = load i32, i32* %6, align 4
  ret i32 %37
}

declare dso_local i32 @zap_lockdir(i32*, i32, i32*, i32, i32, i32, i32, i32**) #1

declare dso_local i32 @zap_remove_impl(i32*, i8*, i32, i32*) #1

declare dso_local i32 @zap_unlockdir(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
